--- a/config/config.yml
+++ b/config/config.yml
@@ -1,8 +1,14 @@
 # Title and subheading for your site. Used on the home page and in page
 # titles.
 #
-title: "My Site"
-subtitle: "(change this text in config/config.yml)"
+title: "Nathanael Jones"
+subtitle: "Ramblings of a computer linguist"
+
+# If you want to set the descrition or keywords meta tags on your site's
+# home page, do it here.
+#
+#description: "I work with "
+# keywords: "enter 3 or 4, comma separated, keywords"
 
 # You should really specify your content's author when generating an
 # Atom feed. Specify at least one of name, uri or email, and Nesta will
@@ -10,16 +16,17 @@ subtitle: "(change this text in config/config.yml)"
 #
 # http://www.atomenabled.org/developers/syndication/atom-format-spec.php#element.feed
 #
-# author:
-#   name: Your Name
-#   uri: http://yourhomepage.com
-#   email: you@yourdomain.com
+author:
+   name: Nathanael Jones
+   uri: http://nathanaeljones.com
+   email: computer.linguist@gmail.com
 
 # You can stick with the default look and feel, or use a theme. Themes are
 # easy to create or install, and live inside the themes directory. You
 # can also use scripts/theme to install them.
 #
 # theme: name-of-theme
+#theme:
 
 # If you want to use the Disqus service (http://disqus.com) to display
 # comments on your site, register a Disqus account and then specify your
@@ -42,7 +49,8 @@ cache: false
 #     your actual content and the (optional) menu.txt file that links to your
 #     main category pages.
 #
-content: content-demo
+#content: content
+content: content
 
 # google_analytics_code
 #     Set this if you want Google Analytics to track traffic on your site.
