Fixed search page, restored uservoice on support page, and added disqus comments to the site, with per-page disabling with the '-comments' library.

--- a/config/config.yml
+++ b/config/config.yml
@@ -33,7 +33,7 @@ author:
 # site's short name here. A comment form will automatically be added to
 # the bottom of your pages.
 #
-# disqus_short_name: mysite
+disqus_short_name: resizer
 
 # cache
 #     Set it to true if you'd like Nesta to cache your pages in ./public.
