Removed dependency on nesta shim, cleaned up layouts.

--- a/config.yml
+++ b/config.yml
@@ -36,6 +36,6 @@ production:
 # Google Webmaster and Analytics usually require a 'google[code].html' file be placed on the domain
 # Use this feature to do this without polluting your directory structure
 google_verify: [344a8f78fa8143f6, b4f699bd08907a51]
-
+google_custom_search: "005556834036073640702:j3bnlceufnc"
 
 
