--- a/config.yml
+++ b/config.yml
@@ -45,51 +45,59 @@ google_custom_search: "005556834036073640702:j3bnlceufnc"
 
 categories:
   - tag: install
-    title: Install
+    title: Install/Debug
     include:
       - /docs/install
       - /docs/workswith
       - /docs/migrating
       - /docs/2to3
-    default: /docs/install
-    sidebar: /docs/install/sidebar
-    append: /docs/install/generic
+    page: /docs/install
+    meta:
+      sidebar: /docs/install/sidebar
+      append: /docs/install/generic
 
   - tag: extend
     title: Extend
     include:
       - /docs/extend
-    default: /docs/extend
-    sidebar: /docs/extend/sidebar
+    page: /docs/extend
+    meta:
+      sidebar: /docs/extend/sidebar
 
   - tag: benefits
     title: Benefits
     include: /docs/benefits
-    default: /docs/benefits
-    sidebar: /docs/benefits/sidebar
+    page: /docs/benefits
+    meta:
+      sidebar: /docs/benefits/sidebar
 
   - tag: use
-    title: Use
+    title: Using ImageResizer
     include: /docs
-    default: /docs
-    sidebar: /docs/sidebar
+    page: /docs
+    meta: 
+      sidebar: /docs/sidebar
 
   - tag: plugins
     title: Plugins
     include: /plugins
-    default: /plugins
-    sidebar: /plugins/sidebar
+    page: /plugins
+    meta:
+      sidebar: /plugins/sidebar
 
-  - tag: licenses
-    title: Licenses
-    include: /licenses
-    default: /licenses
+#  - tag: licenses
+#    title: Licenses
+#    include: /licenses
+#    default: /licenses
 
   - tag: releases
     title: Releases
     include: /releases
-    default: /releases
-    sidebar: /releases/sidebar
+    page: /releases
+    meta:
+      layout: release
+      libs: plusone
+      sidebar: /releases/sidebar
 
 
 
