--- a/content/release_feed.json
+++ b/content/release_feed.json
@@ -1,5 +1,10 @@
 [
-  {"version": "4.0.4",
+  {"version": "4.0.5",
+   "release_date": "20160131T175303Z",
+   "release_notes": "http://imageresizing.net/releases/4-0-5",
+   "drm_free_artifact": {"bucket": "resizer-releases", "blob": "Resizer4-0-5-full-Jan-31-2016-drm-free.zip"},
+   "drm_artifact": "https://s3.amazonaws.com/resizer-releases/Resizer4-0-5-full-Jan-31-2016.zip"
+  },{"version": "4.0.4",
    "release_date": "20151025T175303Z",
    "release_notes": "http://imageresizing.net/releases/4-0-4",
    "drm_free_artifact": {"bucket": "resizer-releases", "blob": "Resizer4-0-4-full-Oct-25-2015-drm-free.zip"},
