URL was incorrect for sitemap

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 title: "ASP.NET Image resizing for IIS"
 subtitle: "URL-based image resizing has arrived, and it works with every language imaginable"
-url: http://www.imageresizing.net/
+url: https://www.imageresizing.net/
 
 # If you want to set the descrition or keywords meta tags on your site's
 # home page, do it here.
