--- a/config.yml
+++ b/config.yml
@@ -33,9 +33,8 @@ disqus_short_name: resizer
 
 content: content
 
-production: 
-  google_analytics_code: "UA-5218175-5"
-  google_analytics_domain: "imageresizing.net" #Override domain for multiple subdomain support
+google_tag_manager: "GTM-5JKQ2GP"
+
 
 # Google Webmaster and Analytics usually require a 'google[code].html' file be placed on the domain
 # Use this feature to do this without polluting your directory structure
