--- a/production-manifest.yml
+++ b/production-manifest.yml
@@ -4,5 +4,6 @@ applications:
   buildpack: ruby_buildpack
   routes:
   - route: resizer-web-production.run.platform.nirdhost.com
+  - route: imageresizing.net
   memory: 256MB
   instances: 2
