--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -10,11 +10,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby 2.7
-      uses: actions/setup-ruby@v2
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.7.x
+        bundler-cache: true
     - name: Build and test with Rake
       run: |
-        gem install bundler
-        bundle install --jobs 4 --retry 3
         bundle exec rake
