--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
-._*
-.*.swp
-.bundle
+# build output
+dist/
+# generated types
+.astro/
+
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
 .DS_Store
-.sass-cache
-.idea
-/*.pstore
-*.log
