--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.1",
     "@astrojs/starlight": "^0.25.3",
+    "@lorenzo_lewis/starlight-utils": "^0.1.2",
     "astro": "^4.10.2",
     "sharp": "^0.32.5",
     "starlight-blog": "^0.11.1",
