Exclude legay content from ts linting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,5 @@
 {
-  "extends": "astro/tsconfigs/strict"
+  "extends": "astro/tsconfigs/strict",
+  "exclude": ["**/legacy_content/**", "**/legacy/***","**/dist/**", "**/__coverage__/**"],
+  //"include" : ["src/**/*.ts", "src/**/*.tsx"]
 }
